--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.14.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "superagent": "^3.4.1"
   },
   "scripts": {
     "test": "mocha"
