--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "superagent": "^3.4.1"
+  },
+  "dependencies": {
+    "cowsay": "^1.1.9",
+    "figlet": "^1.2.0"
   }
 }
