--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Hello-HTTP",
   "version": "1.0.0",
   "description": "http hello server app",
-  "main": "run.js",
+  "main": "server.js",
   "directories": {
     "test": "test"
   },
@@ -10,6 +10,8 @@
     "pretest": "npm run lint",
     "test": "mocha",
     "test:watch": "npm run test -- -w",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
     "lint": "eslint . --ignore-pattern '/initial-concepts/*'"
   },
   "author": "Tom Shultz",
