repairs http-server.js code and validates functionality of http-server.test.js test code

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "rules": {
         "no-console": "off",
         "no-mixed-spaces-and-tabs": "off",
+        "no-unused-vars": 1,
         "indent": [
             "error",
             "tab"
