--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "test:watch": "mocha -w",
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start:watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
